--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -291,7 +291,7 @@ bind = $mainMod, L, exec, gtklock
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, R, exec,
 bindr= $mainMod, R, exec, pkill rofi || rofi -show combi
-bind = $mainMod SHIFT, S, exec, ~/Downloads/e-z.sh
+bind = $mainMod SHIFT, S, exec, grimblast --notify --freeze copysave area
 bind = ,PRINT, exec, grimblast --notify --freeze copy screen
 bind = $mainMod ALT, S, exec,grimblast --notify --freeze copy area
 # focus switcher
